@@ -7,6 +7,7 @@ package io.modelcontextprotocol.spec;
 import io.modelcontextprotocol.server.McpStatelessServerHandler;
 import reactor.core.publisher.Mono;
 
+import java.util.Arrays;
 import java.util.List;
 
 public interface McpStatelessServerTransport {
@@ -29,7 +30,7 @@ public interface McpStatelessServerTransport {
 	Mono<Void> closeGracefully();
 
 	default List<String> protocolVersions() {
-		return List.of(ProtocolVersions.MCP_2025_03_26, ProtocolVersions.MCP_2025_06_18);
+		return Arrays.asList(ProtocolVersions.MCP_2025_03_26, ProtocolVersions.MCP_2025_06_18);
 	}
 
 }
